# adventures-of-code

./: .gitignore  deps.edn
aoc-22/src/: utils.clj
aoc-22/src/aoc22/: day02.cljc  day03.cljc  day04.cljc  day05.cljc  day06.cljc  day09.cljc  day11.cljc  day12.cljc
aoc-25/: .gitignore  README.md  aoc-25.cabal  stack.yaml
aoc-25/src/: Main.hs
src/: utils.clj
src/aoc22/: day01.cljc  day02.cljc  day03.cljc  day04.cljc  day05.cljc  day07.cljc  day08.cljc  day09.cljc  day10.cljc  day11.cljc  day12.cljc
